compiler/tools/fpp-check/test/port_matching/p1_not_port_instance.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_matching/p1_not_port_instance.fpp: 6.9
  match p1 with p2
        ^
error: p1 is not a port instance of component C
